--- a/Instructions/UFO-level-1/index.html
+++ b/Instructions/UFO-level-1/index.html
@@ -36,10 +36,16 @@
                   <div class="form-group">
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
-                        <label for="date">Enter a Date m/dd/yyyy</label>
-                        <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
+                        <label for="date">Enter a Date m/dd/yyyy between 1/1/2010 & 1/13/2010</label>
+                        <input class="form-control" id="datetime" type="text" placeholder="1/11/2010">
                       </li>
                     </ul>
+                    <!-- <ul class="list-group" id="filters">
+                      <li class="filter list-group-item">
+                        <label for="date">Enter a City</label>
+                        <input class="form-control" id="city" type="text" placeholder="waxhaw">
+                      </li>
+                    </ul> -->
                   </div>
                   <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
                 </form>
@@ -72,7 +78,7 @@
     </footer>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-  <script src="static/js/data1.js"></script>
+  <script src="static/js/data.js"></script>
   <script src="static/js/app.js"></script>
 </body>
 
