10/13/2020 6:29pm CST Code clean up

--- a/Instructions/UFO-level-1/index.html
+++ b/Instructions/UFO-level-1/index.html
@@ -39,13 +39,7 @@
                         <label for="date">Enter a Date m/dd/yyyy between 1/1/2010 & 1/13/2010</label>
                         <input class="form-control" id="datetime" type="text" placeholder="1/11/2010">
                       </li>
-                    </ul>
-                    <!-- <ul class="list-group" id="filters">
-                      <li class="filter list-group-item">
-                        <label for="date">Enter a City</label>
-                        <input class="form-control" id="city" type="text" placeholder="waxhaw">
-                      </li>
-                    </ul> -->
+                    </ul>                    
                   </div>
                   <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
                 </form>
@@ -74,7 +68,7 @@
       </div>
     </div>
     <footer class="footer">
-      <span class="bottom">UFO Sightings</span>
+      <span class="bottom">Sightings of UFOs</span>
     </footer>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
